# schedule_parser

./: Cargo.toml  README.md
academic_plan/: Cargo.toml
academic_plan/src/: main.rs
academic_plan/src/domain/: auditor.rs  class.rs  mod.rs  name_corrector.rs  normalizer.rs
academic_plan/src/raw/: row.rs
schedule/: .gitignore  Cargo.toml  horarios_IV.json  horarios_IV.txt
schedule/src/: error.rs  main.rs  parser_qa.rs  pipeline.rs  validator.rs
schedule/src/analytics/: mod.rs  model.rs  workload.rs
schedule/src/domain/: mod.rs  normalizer.rs  professor.rs  room.rs  students.rs
schedule/src/domain/models/: block.rs  class.rs  day.rs  major.rs  mod.rs
schedule/src/extraction/: mod.rs
schedule/src/extraction/models/: class.rs  detail.rs  mod.rs  row.rs
schedule/src/extraction/preprocess/: mod.rs  normalize_lines.rs
schedule/src/storage/: json_store.rs
src/: lib.rs  main.rs  models.rs
ui/: package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: App.tsx  app.tsx  index.css  main.tsx
ui/src/components/: EncounterCard.tsx  MajorSelector.tsx  ScheduleGrid.tsx  SubjectExplorer.tsx
ui/src/logic/: conflicts.ts  domain.ts  organizer.ts  pdf.ts  store.ts  utils.ts
wasm/src/: lib.rs  models.rs
